--- a/basic.css
+++ b/basic.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker|Playfair+Display:900|Open+Sans');
 
-body {{
+body {
     background: #e9e9e9;
     background-image: url('background.jpg');
     background-size: cover;
@@ -13,7 +13,7 @@ body {{
     background-repeat: no-repeat;
 }
 
-body:after {{
+body:after {
     content: "Thanks to Unsplash (background image)";
     position: fixed;
     left: 0;
